# ESP32-S3-Wireless-Serial-Bridge-ESP-NOW

./: README.md
Reciever/: index.html  sdkconfig  sdkconfig.defaults  sdkconfig.old
Reciever/main/: CMakeLists.txt  data_packet.h  esp_now_to_usb.cpp
Sender/: sdkconfig  sdkconfig.defaults  sdkconfig.old
Sender/main/: CMakeLists.txt  data_packet.h  idf_component.yml  usb_to_esp_now.c
